# etl

./: .env.example  .gitignore  README.md  makefile  pyproject.toml  requirements.txt
infra/: .env.example  Dockerfile  Dockerfile.test  docker-compose.yml  makefile
infra/spark/: Dockerfile  spark_job.py  start.sh
pipeline/: Dockerfile  app.py  pyproject.toml
pipeline/core/: clickhouse_client.py  client_clickhouse.py  data_processing.py  kafka_admin.py  kafka_consumer.py  minio_client.py  test_spark.py
pipeline/sql/: create_table_temp1.sql  create_table_temp2.sql  create_tables.sql
src/pipeline/: README.md  app.py
src/pipeline/core/: __init__.py  client_clickhouse.py  config.py  data_processing.py  kafka_admin.py  kafka_consumer.py  kafka_multi_consumer.py  kafka_producer.py  minio_client.py  minio_events_setup.py  spark.py  spark_job.py  submit_spark_job.py  threads.py
src/pipeline/sql/: create_loaded_files.sql  create_table_temp2.sql  create_tables.sql
tests/: ETL_minio_tests.ipynb  conftest.py  test_kafka_admin.py  test_kafka_consumer.py  test_kafka_multi_consumer.py  test_minio_client.py
tests/e2e/: data_verifier.py  mock_data_producer.py
tests/observability/: observe_services.py
