[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = "ETL Pipeline for blockchain data"
authors = ["felipesaadi <felipesaadisiegert@gmail.com>"]
packages = [
    { include = "pipeline" }
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
requests = "^2.32.3"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
minio = "^7.2.9"
clickhouse-connect = "^0.8.5"
python-dotenv = "^1.0.1"
pyspark = "3.4.0"
kafka-python = "^2.0.2"
confluent_kafka = "^2.0.2"
clickhouse-driver = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
